--- a/index.css
+++ b/index.css
@@ -1,5 +1,3 @@
-
-
 html, body {
     width: 100%;
     height: 100%;
@@ -7,6 +5,15 @@ html, body {
     margin: 0px;
     
     font-family: Lato;
+}
+
+html:not([data-scroll='0']) nav{
+    background-color: white;
+
+    color: #333;
+    box-shadow: 0 0 .5em rgba(0, 0, 0, .5);
+
+    transition: all 0.5s ease-in;
 }
 
 .navBar {
@@ -20,10 +27,15 @@ html, body {
     padding: 0px;
 
     color: white;
+    transition: all 0.3s ease-in;
 }
 
 .navBar h2 {
     margin: 15px;
+    padding-top: 6px;
+    padding-left: 25px;
+
+    font-family: 'Abril Fatface';
 }
 
 .navBar ul {
@@ -37,10 +49,26 @@ html, body {
 }
 
 .navBar li {
-    margin: 10px;
+    margin: 5px 10px 5px 10px;
+    padding: 5px 0px 5px 0px;
+    background-clip: padding-box;
+
+    
+    border:0px solid transparent;
+    border-bottom-width: 1px;
+
+    cursor: pointer;
+    transition: all 0.2s ease-out;
 }
 
+.navBar li:hover {
 
+    color: rgb(105, 207, 255);
+    border-color: rgb(105, 207, 255);
+    border-bottom-width: 1px;
+
+    transition: all 0.2s ease-out;
+}
 
 main {
     width: 100%;
@@ -50,6 +78,8 @@ main {
     background-size: 100%;
     background-attachment:fixed;
 
+    font-family: 'Abril Fatface', cursive;
+    letter-spacing: 1px;
     color: white;
 }
 
@@ -64,19 +94,50 @@ main .overlay {
     text-align: center;
 
     /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#000000+0,000000+100&0.5+0,0.5+100 */
-background: -moz-linear-gradient(top,  rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  rgba(0,0,0,0.5) 0%,rgba(0,0,0,0.5) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  rgba(0,0,0,0.5) 0%,rgba(0,0,0,0.5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+background: -moz-linear-gradient(top,  rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.8) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.8) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.8) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80000000', endColorstr='#80000000',GradientType=0 ); /* IE6-9 */
 
 }
 
 main h1 {
-    margin: 10px;
+    margin: 10px 10px 20px 10px;
 
+    letter-spacing: 6x;
     font-size: 4em;
 }
 
-main p {
+main .miniHeader {
+    font-size: 2em;
+
+    margin: 0px;
+}
+
+main .headerText {
+    width: 500px;
+    margin: 0px 0px 20px 0px;
+
+    font-size: 1em;
+}
+
+main .mainButton {
+    margin: 20px;
+    padding: 10px;
+
+    
+    border: 1px solid white;
+
+    cursor:pointer;
+    color: white;
     font-size: 1.2em;
+
+    transition: all 0.3s ease-out;
+}
+
+main .mainButton:hover {
+    background-color: white;
+    color: #333;
+
+    transition: all 0.3s ease-in;
 }
