--- a/index.css
+++ b/index.css
@@ -241,3 +241,22 @@ main .mainButton:hover {
 #enterprise {
     background-color: hsl(48, 100%, 55%);
 }
+
+.testimonySection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0px;
+
+    background-color: hsl(216, 58%, 41%);
+}
+
+.testimonySection h2 {
+    margin: 0px;
+    padding: 20px 0px 0px 0px;
+
+    font-family: 'Abril Fatface';
+    font-size: 3em;
+    letter-spacing: 1px;
+    color: white;
+}
